
* t2 in bam(...,discrete=TRUE) - not treated as tensor products at 
present, and reparameterization needs checking (also for bam). 

* bam(...,discrete=TRUE) does not currently deal with the corner case in 
  which no smoother is penalized.

1.8-32

** bam(...,discrete=TRUE) now uses discretization on the parametric model
   components as well as the smooths. 

* psum.chisq function added to compute c.d.f. of weighted sums of chi-squared
  r.v.s using method of Davies, 1980. This is now used for computing p-values 
  in summary.gam in place of the Liu et al, 2009 approximation.  

* Fix to derivative w.r.t. scale parameter calculation for extended families 
  ('tw' is the only one at present) when using 'ML' smoothing parameter
  estimation. Could lead to step failure with 'tw'. Thanks Kevin Hawkshaw. 

* Fix to prediction/fake formula environment that could cause failure of
  gam/bam called from a function. Thanks to Duncan Murdoch.

* Fix to smoothing parameter uncertainy correction for general families.

* Much cleaner design for the discretization of covariates and associated 
  discretization index matching in bam (predict.bamd and discrete.mf). 

* Fix to jagam logic for identifying separable penalties which led to 
  wrong partioning of penalties for 'fs' smooths used with jagam. Thanks to
  Chris Jackson for spotting the problem.

* Internal Sl list handling changes.

* tensor.prod.model.matrix now also works with sparse matrices of class 
  "dgCMatrix".

1.8-31

* fix in initalization in gammPQL 

* fix of some C routines of type void in place of SEXP called by .Call.

1.8-30

* anova.gam now uses GLRT for multi-model comparisons in both extended and 
  general family cases. 

* Fix to bug in bam(...,discrete=TRUE) offset handling introduced in 1.8-29, 
  which corrupted offset (and generated numerous warnings). Also fixes a 
  less obvious bug introduced at the same time in predict.gam which could get 